@@ -40,3 +40,47 @@ def umount(verbose):
     else:
         if verbose:
             print("no binfmt_misc filesystem present")
+
+
+def check_flags(verbose):
+    """Check the flags for the current binfmt filesystem."""
+    if os.path.exists('/proc/sys/fs/binfmt_misc/WSLInterop'):
+        with open('/proc/sys/fs/binfmt_misc/WSLInterop', 'rt') as wif:
+            for wl in wif:
+                if wl.startswith('flags: '):
+                    flags = wl.rstrip()[7:]
+
+                    if verbose:
+                        print(f'genie: WSL interop flags detected: {flags}')
+
+                    return flags
+
+            if verbose:
+                print("genie: could not find WSLInterop flags")
+                    
+            return None
+
+    else:
+        if verbose:
+            print("genie: no WSLInterop configuration present")
+
+        return None
+
+
+def write_interop_file(verbose, flags):
+    """Write out a new WSL interop file with the specified flags."""
+    if os.path.exists('/usr/lib/binfmt.d'):
+
+        if flags is None:
+            if verbose:
+                print ('genie: no WSLInterop configuration available; assuming PF')
+            flags = 'PF'
+
+        with open('/usr/lib/binfmt.d/WSLInterop.conf', 'w') as f:
+            f.write(f':WSLInterop:M::MZ::/init:{flags}')
+
+        if verbose:
+            print ('genie: written new WSLInterop config')
+
+    else:
+        print ('genie: systemd binfmt.d is not available')
