@@ -42,7 +42,6 @@ install -d -p %{buildroot}%{_exec_prefix}/lib/%{name}
 install -d -p %{buildroot}%{_exec_prefix}/lib/systemd/system-environment-generators
 install -d -p %{buildroot}%{_exec_prefix}/lib/systemd/user-environment-generators
 install -d -p %{buildroot}%{_exec_prefix}/lib/tmpfiles.d
-install -d -p %{buildroot}%{_exec_prefix}/lib/binfmt.d
 install -d -p %{buildroot}%{_bindir}
 install -d -p %{buildroot}%{_unitdir}
 install -d -p %{buildroot}%{_unitdir}/user-runtime-dir@.service.d
@@ -56,7 +55,6 @@ if [ $1 -eq 0 ]; then
 rm -f %{_bindir}/%{name}
 rm -rf %{_exec_prefix}/lib/%{name}/*
 rm -f %{_unitdir}/user-runtime-dir@.service.d/override.conf
-rm -f %{_exec_prefix}/lib/binfmt.d/WSLInterop.conf
 rm -f %{_exec_prefix}/lib/tmpfiles.d/wslg.conf
 rm -f %{_exec_prefix}/lib/systemd/system-environment-generators/80-genie-envar.sh
 rm -f %{_exec_prefix}/lib/systemd/user-environment-generators/80-genie-envar.sh
@@ -82,6 +80,7 @@ rm -rf %{buildroot}
 * Sat Jun 25 2022 Alistair Young <avatar@arkane-systems.net> 2.5-1
 - Fixed Debian multiarch packaging.
 - Removed dependency on python3-psutil (fixes #272).
+- Dynamically build WSLInterop.conf based on existing (fixes #287, #295).
 
 * Sat Jun 25 2022 Alistair Young <avatar@arkane-systems.net> 2.4-1
 - Fixed missing dependency versions.
